Added weather information
